--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "npm_lazy",
-  "description": "Lazy local npm cache server",
-  "version": "1.14.0",
+  "description": "Lazy local npm cache server (customized version)",
+  "version": "1.14.1",
   "license": "BSD-3-Clause",
   "bin": {
     "npm_lazy": "./bin/npm_lazy"
